91% coverage ManagerService tests